Initial setup for tailwindcss

--- a/public/index.html
+++ b/public/index.html
@@ -7,4 +7,7 @@ title: Home
 ---
 <section>
     <h1>{{ "Hello World!" | downcase }}</h1>
+<h1 class="text-3xl font-bold underline">
+    Hello world!
+  </h1>
 </section>
