Modified npm scripts to use concurrently

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,14 @@ title: Home
 
 ---
 <section>
-    <h1>{{ "Hello World!" | downcase }}</h1>
-<h1 class="text-3xl font-bold underline">
-    Hello world! from tailwindcss
-  </h1>
+
+<div class="chat-notification">
+  <div class="chat-notification-logo-wrapper">
+    <img class="chat-notification-logo" src="/img/logo.svg" alt="ChitChat Logo">
+  </div>
+  <div class="chat-notification-content">
+    <h4 class="chat-notification-title">ChitChat</h4>
+    <p class="chat-notification-message">You have a new message!</p>
+  </div>
+</div>
 </section>
